src/app/pages/player/assessment/components/drag-and-drop/drag-and-drop.component.scss
.drop-zones{
  display: flex;
  flex-direction: column;
  flex-grow: 1;
  margin-top: 1em;
  overflow: hidden;
  .drop-zone{
    display: flex;
    flex-direction: column;
    position: relative;
    padding:.5em;
    flex-grow: 1;
    margin-bottom: 1em;
    border: 2px solid var(--ion-color-inria-blue);
    border-radius: 10px;
    background: #f1f1f1;
    overflow: auto;

    .zone-label{
      display: inline-block;
      margin-bottom: .5em;
      text-decoration: underline;
    }

    .zone-info{
      position: absolute;
      top:50%;
      left:50%;
      font-size: .8em;
      transform: translate(-50%, -50%);
    }

    .zone{
      flex-grow: 1;
      position: relative;
      min-height: 2em;
    }
  }
}

.current-response{
  position: relative;
  margin: 0 10px;
}

.response-item{
  margin-bottom: 5px;
  padding: .5em;
  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
  background: white;

  &.selected{
    box-shadow: 0 0 3px rgba(56,128,255,0.12), 0 0 3px rgba(56,128,255,0.24);
  }

  ion-icon{
    float: right;
    font-size: 1.5em;
  }
}

